--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Solid State</a></h1>
 						<nav>
-							<a href="ShahriarAhmedResume.pdf">Resume</a>
+							<a href="ShahriarAhmedResume.pdf">Résumé</a>
 						</nav>
 					</header>
 
 				<!-- Menu -->
 					<nav id="menu">
 						<div class="inner">
-							<h2>Resume</h2>
+							<h2>Résumé</h2>
 							<!-- <ul class="links">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="generic.html">Generic</a></li>
@@ -95,7 +95,7 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Resume</h2>
+									<h2 class="major">Résumé</h2>
 									<p>Learn more about who I am.</p>
 									<!-- <section class="features">
 										<article>
@@ -124,7 +124,7 @@
 										</article>
 									</section> -->
 									<ul class="actions">
-										<li><a href="ShahriarAhmedResume.pdf" class="button">Resume</a></li>
+										<li><a href="ShahriarAhmedResume.pdf" class="button">Résumé</a></li>
 									</ul>
 								</div>
 							</section>
