Add profile picture and blurb

--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
 
 				<!-- Wrapper -->
 					<section id="wrapper">
+            <!-- Zero -->
+							<section id="one" class="wrapper alt style3">
+								<div class="inner">
+									<a href="ShahriarAhmedResume.pdf" class="image"><img class="profile" src="images/profile.jpg" alt="" /></a>
+									<div class="content">
+										<h2 class="major">About me</h2>
+										<p>I am a web developer working in React, Redux and Ruby on Rails among other technologies. I love solving problems as efficiently as possible. I have a strong understanding on what constitutes effective communication and can integrate easily and effectively into any collaborative effort. The prospect of overcoming challenges in automation and user-experience excites me. Allow me to be of service!</p>
+								</div>
+							</section>
 
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
@@ -61,7 +70,6 @@
 									<div class="content">
 										<h2 class="major">Flora</h2>
 										<p>Expand and share your knowledge at Flora, a sleek, intuitive question-and-answer message board.</p>
-										<p>Defend and enhance your source of heat from hordes of enemies.</p>
 										<a href="http://flora-.herokuapp.com/" class="special">Live Demo</a>
 										<a href="https://github.com/SHOCK122/Flora" class="special">Github Repository</a>
 								</div>
