Add favico and absolutezero

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 
@@ -82,7 +84,7 @@
 									<div class="content">
 										<h2 class="major">Absolute Zero</h2>
 										<p>Defend and enhance your source of heat from hordes of enemies.</p>
-										<a href="#" class="special">Live Demo</a>
+										<a href="./absolutezero/index.html" class="special">Live Demo</a>
 										<a href="https://github.com/SHOCK122/absolutezero" class="special">Github Repository</a>
 									</div>
 								</div>
