Update live links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Ѕноск</a></h1>
 						<nav>
 							<a href="ShahriarAhmedResume.pdf">Résumé</a>
 						</nav>
@@ -47,7 +47,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-diamond"></span></div>
+							<div class="logo"><img class="icon icon-shock" src="images/icon.jpg" alt="" /></span></div>
 							<h2>Shahriar Ahmed</h2>
 							<p>Concise, effective communication. Evidence-based decision-making. Elegant problem-solving. Adaptability.</p>
 						</div>
@@ -68,11 +68,11 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="http://flora-.herokuapp.com/" class="image"><img src="images/pic01.png" alt="" /></a>
+									<a href="http://www.floraapp.us/#/" class="image"><img src="images/pic01.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Flora</h2>
 										<p>Expand and share your knowledge at Flora, a sleek, intuitive question-and-answer message board.</p>
-										<a href="http://flora-.herokuapp.com/" class="special">Live Demo</a>
+										<a href="http://www.floraapp.us/#/" class="special">Live Demo</a>
 										<a href="https://github.com/SHOCK122/Flora" class="special">Github Repository</a>
 								</div>
 							</section>
@@ -80,7 +80,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="./absolutezero/index.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Absolute Zero</h2>
 										<p>Defend and enhance your source of heat from hordes of enemies.</p>
