Add skill icons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 	</head>
@@ -107,38 +108,139 @@
 								<div class="inner">
 									<h2 class="major">Résumé</h2>
 									<p>Learn more about who I am.</p>
-									<!-- <section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section> -->
 									<ul class="actions">
 										<li><a href="ShahriarAhmedResume.pdf" class="button">Résumé</a></li>
 									</ul>
+									<div class="service">
+							            <div class="service-box">
+							              <div>
+							                <i class="devicon-ruby-plain-wordmark colored"></i>
+							              </div>
+							              <div>
+							                <h4>Ruby</h4>
+							              </div>
+							            </div>
+							            <!-- Service box 2 -->
+							            <div class="service-box">
+							              <div>
+							                <i class="devicon-rails-plain-wordmark colored"></i>
+							              </div>
+							              <div>
+							                <h4>Ruby on Rails</h4>
+							              </div>
+							            </div>
+							            <!-- Service box 3 -->
+							            <div class="service-box">
+							              <div>
+							                <i class="devicon-javascript-plain colored"></i>
+							              </div>
+							              <div>
+							                <h4>JavaScript</h4>
+							              </div>
+							            </div>
+							            <!-- Service box 4 -->
+							            <div class="service-box">
+							              <div>
+							                <i class="devicon-react-original-wordmark colored"></i>
+							              </div>
+							              <div>
+							                <h4>React</h4>
+							              </div>
+							            </div>
+							            <!--  Service box 5 -->
+							            <!--<div class="service-box">-->
+							            <!--  <div>-->
+							            <!--    <i class="devicon-nodejs-plain colored"></i>-->
+							            <!--  </div>-->
+							            <!--  <div>-->
+							            <!--    <h4>Node.js</h4>-->
+							            <!--  </div>-->
+							            <!--</div>-->
+							            <!-- Service box 7 -->
+							            <div class="service-box">
+							              <div>
+							              <i class="devicon-html5-plain-wordmark colored"></i>
+							              </div>
+							              <div>
+							                <h4>HTML5</h4>
+							              </div>
+							            </div>
+							            <!-- end Service box 7 -->
+							            <!-- Service box 8 -->
+							            <div class="service-box">
+							              <div>
+							              <i class="devicon-css3-plain-wordmark colored"></i>
+							              </div>
+							              <div>
+							                <h4>CSS3</h4>
+							              </div>
+							            </div>
+							            <!-- end Service box 8 -->
+							        </div>
+							        <div class="service">
+							            <!-- Service box 11 -->
+							            <div class="service-box">
+							              <div>
+							              <i class="devicon-jquery-plain-wordmark colored"></i>
+							              </div>
+							              <div>
+							                <h4>JQuery</h4>
+							              </div>
+							            </div>
+							            <!-- end Service box 11 -->
+							            <!-- Service box 6 -->
+							            <div class="service-box">
+							              <div>
+							              <i class="devicon-git-plain colored"></i>
+							              </div>
+							              <div>
+							                <h4>Git</h4>
+							              </div>
+							            </div>
+							            <!-- end Service box 6 -->
+							            <!-- Service box 9 -->
+							            <div class="service-box">
+							              <div>
+							              <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+							              </div>
+							              <div>
+							                <h4>AWS</h4>
+							              </div>
+							            </div>
+							            <!-- end Service box 9 -->
+							            <!-- Service box 10 -->
+							            <div class="service-box">
+							              <div>
+							              <i class="devicon-heroku-line colored"></i>
+							              </div>
+							              <div>
+							                <h4>Heroku</h4>
+							              </div>
+							            </div>
+							            <!-- end Service box 10 -->
+							            <!-- Service box 12 -->
+							            <div class="service-box">
+							              <div>
+							              <i class="devicon-postgresql-plain-wordmark colored"></i>
+							              </div>
+							              <div>
+							                <h4>PostgreSQL</h4>
+							              </div>
+							            </div>
+							            <!-- end Service box 12 -->
+							            <!-- Service box 13 -->
+							            <div class="service-box">
+							              <div>
+							              <i class="devicon-mysql-plain-wordmark colored"></i>
+							              </div>
+							              <div>
+							                <h4>MySQL</h4>
+							              </div>
+							            </div>
+							            <!-- end Service box 13 -->
+						          </div>
 								</div>
 							</section>
-
 					</section>
 
 				<!-- Footer -->
@@ -146,33 +248,15 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>The best way to contact me is by email or text.</p>
-							<form method="post" action="#">
-								<div class="field">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<div class="field">
-									<label for="email">Email</label>
-									<input type="email" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="4"></textarea>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
 							<ul class="contact">
-								<!-- <li class="fa-home">
+								<li class="fa-home">
 									Shahriar Ahmed<br />
 									New York<br />
-								</li> -->
+								</li>
 								<li class="fa-phone">(347) 659-0650</li>
 								<li class="fa-envelope"><a href="mailto:ahmed.shahriar@gmail.com">ahmed.shahriar@gmail.com</a></li>
-								<!-- <li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li> -->
+								<li class="fa-linkedin"><a href="https://www.linkedin.com/in/shock122">linkedin.com/in/shock122</a></li>
+								<li class="fa-angellist"><a href="https://angel.co/shahriar-ahmed">angel.co/shahriar-ahmed</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Shahriar Ahmed. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
