Fix styling of dev icons

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<div class="inner">
 							<div class="logo"><img class="icon icon-shock" src="images/icon.jpg" alt="" /></span></div>
 							<h2>Shahriar Ahmed</h2>
-							<p>Concise, effective communication. Evidence-based decision-making. Elegant problem-solving. Adaptability.</p>
+							<p>Concise, effective communication. Evidence-based decision-making.</p><p>Elegant problem-solving. Adaptability.</p>
 						</div>
 					</section>
 
