--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<!-- Wrapper -->
 					<section id="wrapper">
             <!-- Zero -->
-							<section id="one" class="wrapper alt style3">
+							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
 									<a href="ShahriarAhmedResume.pdf" class="image"><img class="profile" src="images/profile.jpg" alt="" /></a>
 									<div class="content">
@@ -61,7 +61,7 @@
 								</div>
 							</section>
 						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
+							<section id="one" class="wrapper alt spotlight style2">
 								<div class="inner">
 									<a href="http://www.floraapp.us/#/" class="image"><img src="images/pic01.png" alt="" /></a>
 									<div class="content">
@@ -72,7 +72,7 @@
 								</div>
 							</section>
 						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
+							<section id="two" class="wrapper spotlight style3">
 								<div class="inner">
 									<a href="./absolutezero/index.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
@@ -84,7 +84,7 @@
 								</div>
 							</section>
 						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
+							<section id="three" class="wrapper alt spotlight style2">
 								<div class="inner">
 									<a href="https://github.com/SHOCK122/swORM" class="image"><img src="images/pic03.png" alt="" /></a>
 									<div class="content">
@@ -94,8 +94,10 @@
 									</div>
 								</div>
 							</section>
+							<section id="three" class="wrapper spotlight style3">
+							</section>
 						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
+							<section id="four" class="wrapper alt style3">
 								<div class="inner">
 									<h2 class="major">Résumé</h2>
 									<p>Learn more about who I am.</p>
