Tweek styling further

--- a/index.html
+++ b/index.html
@@ -104,133 +104,135 @@
 									<ul class="actions">
 										<li><a href="ShahriarAhmedResume.pdf" class="button">Résumé</a></li>
 									</ul>
-									<div class="service">
-							            <div class="service-box">
-							              <div>
-							                <i class="devicon-ruby-plain-wordmark colored"></i>
-							              </div>
-							              <div>
-							                <h4>Ruby</h4>
-							              </div>
-							            </div>
-							            <!-- Service box 2 -->
-							            <div class="service-box">
-							              <div>
-							                <i class="devicon-rails-plain-wordmark colored"></i>
-							              </div>
-							              <div>
-							                <h4>Ruby on Rails</h4>
-							              </div>
-							            </div>
-							            <!-- Service box 3 -->
-							            <div class="service-box">
-							              <div>
-							                <i class="devicon-javascript-plain colored"></i>
-							              </div>
-							              <div>
-							                <h4>JavaScript</h4>
-							              </div>
-							            </div>
-							            <!-- Service box 4 -->
-							            <div class="service-box">
-							              <div>
-							                <i class="devicon-react-original-wordmark colored"></i>
-							              </div>
-							              <div>
-							                <h4>React</h4>
-							              </div>
-							            </div>
-							            <!--  Service box 5 -->
-							            <!--<div class="service-box">-->
-							            <!--  <div>-->
-							            <!--    <i class="devicon-nodejs-plain colored"></i>-->
-							            <!--  </div>-->
-							            <!--  <div>-->
-							            <!--    <h4>Node.js</h4>-->
-							            <!--  </div>-->
-							            <!--</div>-->
-							            <!-- Service box 7 -->
-							            <div class="service-box">
-							              <div>
-							              <i class="devicon-html5-plain-wordmark colored"></i>
-							              </div>
-							              <div>
-							                <h4>HTML5</h4>
-							              </div>
-							            </div>
-							            <!-- end Service box 7 -->
-							            <!-- Service box 8 -->
-							            <div class="service-box">
-							              <div>
-							              <i class="devicon-css3-plain-wordmark colored"></i>
-							              </div>
-							              <div>
-							                <h4>CSS3</h4>
-							              </div>
-							            </div>
-							            <!-- end Service box 8 -->
-							        </div>
-							        <div class="service">
-							            <!-- Service box 11 -->
-							            <div class="service-box">
-							              <div>
-							              <i class="devicon-jquery-plain-wordmark colored"></i>
-							              </div>
-							              <div>
-							                <h4>JQuery</h4>
-							              </div>
-							            </div>
-							            <!-- end Service box 11 -->
-							            <!-- Service box 6 -->
-							            <div class="service-box">
-							              <div>
-							              <i class="devicon-git-plain colored"></i>
-							              </div>
-							              <div>
-							                <h4>Git</h4>
-							              </div>
-							            </div>
-							            <!-- end Service box 6 -->
-							            <!-- Service box 9 -->
-							            <div class="service-box">
-							              <div>
-							              <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
-							              </div>
-							              <div>
-							                <h4>AWS</h4>
-							              </div>
-							            </div>
-							            <!-- end Service box 9 -->
-							            <!-- Service box 10 -->
-							            <div class="service-box">
-							              <div>
-							              <i class="devicon-heroku-line colored"></i>
-							              </div>
-							              <div>
-							                <h4>Heroku</h4>
-							              </div>
-							            </div>
-							            <!-- end Service box 10 -->
-							            <!-- Service box 12 -->
-							            <div class="service-box">
-							              <div>
-							              <i class="devicon-postgresql-plain-wordmark colored"></i>
-							              </div>
-							              <div>
-							                <h4>PostgreSQL</h4>
-							              </div>
-							            </div>
-							            <!-- end Service box 12 -->
-							            <!-- Service box 13 -->
-							            <div class="service-box">
-							              <div>
-							              <i class="devicon-mysql-plain-wordmark colored"></i>
-							              </div>
-							              <div>
-							                <h4>MySQL</h4>
-							              </div>
-							            </div>
-							            <!-- end Service box 13 -->
+									<div class="dev-icons">
+										<div class="service">
+								            <div class="service-box">
+								              <div>
+								                <i class="devicon-ruby-plain-wordmark colored"></i>
+								              </div>
+								              <div>
+								                <h4>Ruby</h4>
+								              </div>
+								            </div>
+								            <!-- Service box 2 -->
+								            <div class="service-box">
+								              <div>
+								                <i class="devicon-rails-plain-wordmark colored"></i>
+								              </div>
+								              <div>
+								                <h4>Ruby on Rails</h4>
+								              </div>
+								            </div>
+								            <!-- Service box 3 -->
+								            <div class="service-box">
+								              <div>
+								                <i class="devicon-javascript-plain colored"></i>
+								              </div>
+								              <div>
+								                <h4>JavaScript</h4>
+								              </div>
+								            </div>
+								            <!-- Service box 4 -->
+								            <div class="service-box">
+								              <div>
+								                <i class="devicon-react-original-wordmark colored"></i>
+								              </div>
+								              <div>
+								                <h4>React</h4>
+								              </div>
+								            </div>
+								            <!--  Service box 5 -->
+								            <!--<div class="service-box">-->
+								            <!--  <div>-->
+								            <!--    <i class="devicon-nodejs-plain colored"></i>-->
+								            <!--  </div>-->
+								            <!--  <div>-->
+								            <!--    <h4>Node.js</h4>-->
+								            <!--  </div>-->
+								            <!--</div>-->
+								            <!-- Service box 7 -->
+								            <div class="service-box">
+								              <div>
+								              <i class="devicon-html5-plain-wordmark colored"></i>
+								              </div>
+								              <div>
+								                <h4>HTML5</h4>
+								              </div>
+								            </div>
+								            <!-- end Service box 7 -->
+								            <!-- Service box 8 -->
+								            <div class="service-box">
+								              <div>
+								              <i class="devicon-css3-plain-wordmark colored"></i>
+								              </div>
+								              <div>
+								                <h4>CSS3</h4>
+								              </div>
+								            </div>
+								            <!-- end Service box 8 -->
+								        </div>
+								        <div class="service">
+								            <!-- Service box 11 -->
+								            <div class="service-box">
+								              <div>
+								              <i class="devicon-jquery-plain-wordmark colored"></i>
+								              </div>
+								              <div>
+								                <h4>JQuery</h4>
+								              </div>
+								            </div>
+								            <!-- end Service box 11 -->
+								            <!-- Service box 6 -->
+								            <div class="service-box">
+								              <div>
+								              <i class="devicon-git-plain colored"></i>
+								              </div>
+								              <div>
+								                <h4>Git</h4>
+								              </div>
+								            </div>
+								            <!-- end Service box 6 -->
+								            <!-- Service box 9 -->
+								            <div class="service-box">
+								              <div>
+								              <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+								              </div>
+								              <div>
+								                <h4>AWS</h4>
+								              </div>
+								            </div>
+								            <!-- end Service box 9 -->
+								            <!-- Service box 10 -->
+								            <div class="service-box">
+								              <div>
+								              <i class="devicon-heroku-line colored"></i>
+								              </div>
+								              <div>
+								                <h4>Heroku</h4>
+								              </div>
+								            </div>
+								            <!-- end Service box 10 -->
+								            <!-- Service box 12 -->
+								            <div class="service-box">
+								              <div>
+								              <i class="devicon-postgresql-plain-wordmark colored"></i>
+								              </div>
+								              <div>
+								                <h4>PostgreSQL</h4>
+								              </div>
+								            </div>
+								            <!-- end Service box 12 -->
+								            <!-- Service box 13 -->
+								            <div class="service-box">
+								              <div>
+								              <i class="devicon-mysql-plain-wordmark colored"></i>
+								              </div>
+								              <div>
+								                <h4>MySQL</h4>
+								              </div>
+								            </div>
+								            <!-- end Service box 13 -->
+							          </div>
 						          </div>
 								</div>
 							</section>
