--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Ѕноск</a></h1>
 						<nav>
-							<a href="ShahriarAhmedResume.pdf">Résumé</a>
+							<a href="ShahriarAhmedResume.pdf" target="_blank">Résumé</a>
 						</nav>
 					</header>
 				<!-- Menu -->
@@ -54,7 +54,7 @@
             <!-- Zero -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="ShahriarAhmedResume.pdf" class="image"><img class="profile" src="images/profile.jpg" alt="" /></a>
+									<a href="ShahriarAhmedResume.pdf" class="image" target="_blank"><img class="profile" src="images/profile.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About me</h2>
 										<p>I am a web developer working in React, Redux and Ruby on Rails among other technologies. I love solving problems as efficiently as possible. I have a strong understanding on what constitutes effective communication and can integrate easily and effectively into any collaborative effort. The prospect of overcoming challenges in automation and user-experience excites me. Allow me to be of service!</p>
@@ -63,34 +63,34 @@
 						<!-- One -->
 							<section id="one" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="http://www.floraapp.us/#/" class="image"><img src="images/pic01.png" alt="" /></a>
+									<a href="http://www.floraapp.us/#/" class="image" target="_blank"><img src="images/pic01.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Flora</h2>
 										<p>Expand and share your knowledge at Flora, a sleek, intuitive question-and-answer message board.</p>
-										<a href="http://www.floraapp.us/#/" class="special">Live Demo</a>
-										<a href="https://github.com/SHOCK122/Flora" class="special">Github Repository</a>
+										<a href="http://www.floraapp.us/#/" class="special" target="_blank">Live Demo</a>
+										<a href="https://github.com/SHOCK122/Flora" class="special" target="_blank">Github Repository</a>
 								</div>
 							</section>
 						<!-- Two -->
 							<section id="two" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="./absolutezero/index.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="./absolutezero/index.html" class="image" target="_blank"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Absolute Zero</h2>
 										<p>Defend and enhance your source of heat from hordes of enemies.</p>
-										<a href="./absolutezero/index.html" class="special">Live Demo</a>
-										<a href="https://github.com/SHOCK122/absolutezero" class="special">Github Repository</a>
+										<a href="./absolutezero/index.html" class="special" target="_blank">Live Demo</a>
+										<a href="https://github.com/SHOCK122/absolutezero" class="special" target="_blank">Github Repository</a>
 									</div>
 								</div>
 							</section>
 						<!-- Three -->
 							<section id="three" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="https://github.com/SHOCK122/swORM" class="image"><img src="images/pic03.png" alt="" /></a>
+									<a href="https://github.com/SHOCK122/swORM" class="image" target="_blank"><img src="images/pic03.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">swORM</h2>
 										<p>A lightweight, simple-to-use object relational mapping system written in Ruby.</p>
-										<a href="https://github.com/SHOCK122/swORM" class="special">Github Repository</a>
+										<a href="https://github.com/SHOCK122/swORM" class="special" target="_blank">Github Repository</a>
 									</div>
 								</div>
 							</section>
@@ -102,7 +102,7 @@
 									<h2 class="major">Résumé</h2>
 									<p>Learn more about who I am.</p>
 									<ul class="actions">
-										<li><a href="ShahriarAhmedResume.pdf" class="button">Résumé</a></li>
+										<li><a href="ShahriarAhmedResume.pdf" class="button" target="_blank">Résumé</a></li>
 									</ul>
 									<div class="dev-icons">
 										<div class="service">
@@ -249,8 +249,8 @@
 								</li>
 								<li class="fa-phone">(347) 659-0650</li>
 								<li class="fa-envelope"><a href="mailto:ahmed.shahriar@gmail.com">ahmed.shahriar@gmail.com</a></li>
-								<li class="fa-linkedin"><a href="https://www.linkedin.com/in/shock122">linkedin.com/in/shock122</a></li>
-								<li class="fa-angellist"><a href="https://angel.co/shahriar-ahmed">angel.co/shahriar-ahmed</a></li>
+								<li class="fa-linkedin"><a href="https://www.linkedin.com/in/shock122" target="_blank">linkedin.com/in/shock122</a></li>
+								<li class="fa-angellist"><a href="https://angel.co/shahriar-ahmed" target="_blank">angel.co/shahriar-ahmed</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Shahriar Ahmed. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
