Modify contact me section

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>The best way to contact me is by email or text.</p>
+							<p>The best way to contact me is by email or phone.</p>
 							<ul class="contact">
 								<li class="fa-home">
 									Shahriar Ahmed<br />
