Shorten flora description

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									<a href="http://www.floraapp.us/#/" class="image" target="_blank"><img src="images/pic01.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Flora</h2>
-										<p>Expand and share your knowledge at Flora, an intuitive question-and-answer message board.</p>
+										<p>Flora is an intuitive question-and-answer message board.</p>
 										<a href="http://www.floraapp.us/#/" class="special" target="_blank">Live Demo</a>
 										<a href="https://github.com/SHOCK122/Flora" class="special" target="_blank">Github Repository</a>
 								</div>
