--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="./absolutezero/index.html" class="image" target="_blank"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="./absolutezero/index.html" class="image" target="_blank"><img src="images/pic02.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Absolute Zero</h2>
 										<p>Defend and enhance your source of heat from hordes of enemies.</p>
