--- a/index.html
+++ b/index.html
@@ -63,35 +63,22 @@
 						<!-- One -->
 							<section id="one" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="http://www.floraapp.us/#/" class="image" target="_blank"><img src="images/pic01.png" alt="" /></a>
+									<a href="https://github.com/SHOCK122/elakapwa" class="image" target="_blank"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Flora</h2>
-										<p>Learn at Flora, an intuitive question-and-answer message board.</p>
-										<a href="http://www.floraapp.us/#/" class="special" target="_blank">Live Demo</a>
-										<a href="https://github.com/SHOCK122/Flora" class="special" target="_blank">Github Repository</a>
+										<h2 class="major">Elaka</h2>
+										<p>Extremely light-weight multi-lingual Maternal Health PWA designed for use in limited connectivity regions.</p>
+										<a href="https://github.com/SHOCK122/elakapwa" class="special" target="_blank">Github Repository</a>
+									</div>
 								</div>
 							</section>
 						<!-- Two -->
 							<section id="two" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="./absolutezero/index.html" class="image" target="_blank"><img src="images/pic02.png" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Absolute Zero</h2>
-										<p>Defend and enhance your source of heat from hordes of enemies.</p>
-										<a href="./absolutezero/index.html" class="special" target="_blank">Live Demo</a>
-										<a href="https://github.com/SHOCK122/absolutezero" class="special" target="_blank">Github Repository</a>
-									</div>
 								</div>
 							</section>
 						<!-- Three -->
 							<section id="three" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="https://github.com/SHOCK122/swORM" class="image" target="_blank"><img src="images/pic03.png" alt="" /></a>
-									<div class="content">
-										<h2 class="major">swORM</h2>
-										<p>A lightweight, simple-to-use object relational mapping system written in Ruby.</p>
-										<a href="https://github.com/SHOCK122/swORM" class="special" target="_blank">Github Repository</a>
-									</div>
 								</div>
 							</section>
 							<section id="three" class="wrapper spotlight style3">
