--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Shahriar Ahmed - Developer</title>
+		<title>SHOCK  - Developer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -24,7 +24,7 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Ѕноск</a></h1>
 						<nav>
-							<a href="ShahriarAhmedResume.pdf" target="_blank">Résumé</a>
+							<a href="SHOCKResume.pdf" target="_blank">Résumé</a>
 						</nav>
 					</header>
 				<!-- Menu -->
@@ -44,9 +44,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><img class="icon icon-shock" src="images/icon.jpg" alt="" /></span></div>
-							<h2>Shahriar Ahmed</h2>
-							<p>Concise, effective communication. Evidence-based decision-making.</p><p>Elegant problem-solving. Adaptability.</p>
+							<div class="logo"><img class="icon icon-SHOCK" src="images/icon.jpg" alt="" /></span></div>
+							<h2>SHOCK </h2>
+							<p>Concise, effective communication. Evidence-based decision-making.</p><p>Adaptive.</p>
 						</div>
 					</section>
 				<!-- Wrapper -->
@@ -54,10 +54,10 @@
             <!-- Zero -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="ShahriarAhmedResume.pdf" class="image" target="_blank"><img class="profile" src="images/profile.jpg" alt="" /></a>
+									<a href="SHOCKResume.pdf" class="image" target="_blank"><img class="profile" src="images/profile.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About me</h2>
-										<p>I am a web developer working in React, Redux and Ruby on Rails among other technologies. I love solving problems as efficiently as possible. I have a strong understanding on what constitutes effective communication and can integrate easily and effectively into any collaborative effort. The prospect of overcoming challenges in automation and user-experience excites me. Allow me to be of service!</p>
+										<p>I am a software engineer with experince in React, Ruby, .Net development and Python. Problem-solving is my passion and coding is simply a means to that end.</p>
 								</div>
 							</section>
 						<!-- One -->
@@ -66,7 +66,7 @@
 									<a href="https://github.com/SHOCK122/elakapwa" class="image" target="_blank"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Elaka</h2>
-										<p>Extremely light-weight multi-lingual Maternal Health PWA designed for use in limited connectivity regions.</p>
+										<p>Extremely light-weight multi-lingual Maternal Health Progressive Web Application designed for use in limited connectivity regions.</p>
 										<a href="https://github.com/SHOCK122/elakapwa" class="special" target="_blank">Github Repository</a>
 									</div>
 								</div>
@@ -89,7 +89,7 @@
 									<h2 class="major">Résumé</h2>
 									<p>Learn more about who I am.</p>
 									<ul class="actions">
-										<li><a href="ShahriarAhmedResume.pdf" class="button" target="_blank">Résumé</a></li>
+										<li><a href="SHOCKResume.pdf" class="button" target="_blank">Résumé</a></li>
 									</ul>
 									<div class="dev-icons">
 										<div class="service">
@@ -129,14 +129,14 @@
 								              </div>
 								            </div>
 								            <!--  Service box 5 -->
-								            <!--<div class="service-box">-->
-								            <!--  <div>-->
-								            <!--    <i class="devicon-nodejs-plain colored"></i>-->
-								            <!--  </div>-->
-								            <!--  <div>-->
-								            <!--    <h4>Node.js</h4>-->
-								            <!--  </div>-->
-								            <!--</div>-->
+								            <div class="service-box">
+								             <div>
+								               <i class="devicon-nodejs-plain colored"></i>
+								             </div>
+								             <div>
+								               <h4>Node.js</h4>
+								             </div>
+								             </div>
 								            <!-- Service box 7 -->
 								            <div class="service-box">
 								              <div>
@@ -162,23 +162,13 @@
 								            <!-- Service box 11 -->
 								            <div class="service-box">
 								              <div>
-								              <i class="devicon-jquery-plain-wordmark colored"></i>
+								              <i class="devicon-azure-plain-wordmark colored"></i>
 								              </div>
 								              <div>
-								                <h4>JQuery</h4>
+								                <h4>Azure</h4>
 								              </div>
 								            </div>
 								            <!-- end Service box 11 -->
-								            <!-- Service box 6 -->
-								            <div class="service-box">
-								              <div>
-								              <i class="devicon-git-plain colored"></i>
-								              </div>
-								              <div>
-								                <h4>Git</h4>
-								              </div>
-								            </div>
-								            <!-- end Service box 6 -->
 								            <!-- Service box 9 -->
 								            <div class="service-box">
 								              <div>
@@ -212,13 +202,23 @@
 								            <!-- Service box 13 -->
 								            <div class="service-box">
 								              <div>
-								              <i class="devicon-mysql-plain-wordmark colored"></i>
+								              <i class="devicon-microsoftsqlserver-plain-wordmark colored"></i>
 								              </div>
 								              <div>
-								                <h4>MySQL</h4>
+								                <h4>SQL Server</h4>
 								              </div>
 								            </div>
 								            <!-- end Service box 13 -->
+								            <!-- Service box 6 -->
+								            <div class="service-box">
+												<div>
+												<i class="devicon-git-plain colored"></i>
+												</div>
+												<div>
+												  <h4>Git</h4>
+												</div>
+											  </div>
+											  <!-- end Service box 6 -->
 							          </div>
 						          </div>
 								</div>
@@ -227,20 +227,12 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>The best way to contact me is by email or phone.</p>
+							<h2 class="major">Get in touch...</h2>
+							<p>...if you can.</p>
 							<ul class="contact">
-								<li class="fa-home">
-									Shahriar Ahmed<br />
-									New York<br />
-								</li>
-								<li class="fa-phone">(347) 659-0650</li>
-								<li class="fa-envelope"><a href="mailto:ahmed.shahriar@gmail.com">ahmed.shahriar@gmail.com</a></li>
-								<li class="fa-linkedin"><a href="https://www.linkedin.com/in/shock122" target="_blank">linkedin.com/in/shock122</a></li>
-								<li class="fa-angellist"><a href="https://angel.co/shahriar-ahmed" target="_blank">angel.co/shahriar-ahmed</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Shahriar Ahmed. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; SHOCK.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
