--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><img class="icon icon-SHOCK" src="images/icon.jpg" alt="" /></span></div>
-							<h2>SHOCK </h2>
-							<p>Concise, effective communication. Evidence-based decision-making.</p><p>Adaptive.</p>
+							<h2>SHOCK</h2>
+							<p>Concise, effective communication </p>
+							<p>Evidence-based decision-making</p>
+							<p>Adaptive.</p>
 						</div>
 					</section>
 				<!-- Wrapper -->
@@ -57,7 +59,7 @@
 									<a href="SHOCKResume.pdf" class="image" target="_blank"><img class="profile" src="images/profile.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About me</h2>
-										<p>I am a software engineer with experince in React, Ruby, .Net development and Python. Problem-solving is my passion and coding is simply a means to that end.</p>
+										<p>I am a software engineer with experince in React, Ruby, .Net and Python development. Problem-solving is my passion and coding is simply a means to that end.</p>
 								</div>
 							</section>
 						<!-- One -->
@@ -232,7 +234,7 @@
 							<ul class="contact">
 							</ul>
 							<ul class="copyright">
-								<li>&copy; SHOCK.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; SHOCK</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
