--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="https://github.com/SHOCK122/elakapwa" class="image" target="_blank"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="https://github.com/SHOCK122/elakapwa" class="image" target="_blank"><img src="images/elaka.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Elaka</h2>
 										<p>Extremely light-weight multi-lingual Maternal Health Progressive Web Application designed for use in limited connectivity regions.</p>
